[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-twitch-chat-listener"
version = "0.1.0"
description = "Very simple to use Twitch chat bot for lurking chat that does not require an oauth token"
license = {text = "MIT"}
dependencies = [
    "websockets"
]
